fix horizontal scroll

--- a/frontend-web/src/app/page.module.css
+++ b/frontend-web/src/app/page.module.css
@@ -30,7 +30,7 @@
   padding-top: 80px;
   padding-right: 0;
   padding-bottom: 0;
-  padding-left: 100px;
+  padding-left: 0;
 }
 
 .intro {
